--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fcc-api-projects-boilerplate",
+  "name": "fcc-timestamp-microservice-adsg93",
   "version": "0.0.1",
   "description": "An FCC Backend Challenge",
   "main": "server.js",
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://githost.com/camper/repo.git"
+    "url": "https://github.com/adsg93/FFC_timeStamp_microService.git"
   },
   "keywords": [
     "node",
